# nuttx-apps

./: CMakeLists.txt  LICENSE
.github/workflows/: build.yml
examples/foc/: Kconfig  Makefile  foc_cfg.h  foc_device.h  foc_device_serial.c  foc_fixed16_thr.c  foc_float_thr.c  foc_main.c  foc_motor_b16.c  foc_motor_b16.h  foc_motor_f32.c  foc_motor_f32.h  foc_nxscope.c  foc_thr.h
examples/focserial/: Kconfig  Make.defs  Makefile  focserial_device.c  focserial_device.h  focserial_main.c
examples/nimble_blecent/: CMakeLists.txt
examples/nimble_bleprph/: CMakeLists.txt
examples/udp/: CMakeLists.txt  udp_client.c  udp_cmdline.c  udp_host.c  udp_netinit.c  udp_server.c  udp_target1.c  udp_target2.c
fsutils/zcbor/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
graphics/lvgl/: CMakeLists.txt
include/industry/foc/: foc_common.h
include/logging/nxscope/: nxscope.h  nxscope_chan.h  nxscope_intf.h  nxscope_proto.h
include/mgmt/mcumgr/: mgmt.h  mgmt_defines.h  smp.h  smp_buf.h
include/modbus/: mb.h  mbport.h
industry/foc/: Kconfig  Makefile
industry/foc/fixed16/: foc_align.c
industry/foc/float/: foc_align.c
industry/foc/serial/: foc_serial.c  foc_serial_master.c  foc_serial_slave.c
industry/s2opc/: Kconfig  Make.defs  Makefile
logging/nxscope/: CMakeLists.txt  Kconfig  Makefile  nxscope.c  nxscope_chan.c  nxscope_ifile.c  nxscope_pser.c  nxscope_sensors.c
logging/nxscope/sensors/: CMakeLists.txt  Kconfig  Make.defs  Makefile  nxscope_main.c
mgmt/: CMakeLists.txt  Kconfig  Make.defs  Makefile
mgmt/mcumgr/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  daemon.c  mcumgr_daemon.c
mgmt/mcumgr/mcumgr/: Kconfig  mgmt.c  os_mgmt.c  shell_mgmt.c  smp.c  smp_ble_nimble.c  smp_dummy.c  smp_err.c  smp_reassembly.c  zcbor_bulk.c  zcbor_bulk.h
modbus/: mb.c
modbus/ascii/: mbascii.c  mbascii.h
modbus/nuttx/: portserial.c
modbus/rtu/: mbrtu.c  mbrtu.h
netutils/s2opc/: .gitignore  CMakeLists.txt  Kconfig
nshlib/: nsh_syscmds.c
system/adb/: CMakeLists.txt
system/mcumgr/: CMakeLists.txt  Kconfig  Make.defs  Makefile
system/mcumgr/configs/fs_mgmt/: fs_mgmt_config.h
system/mcumgr/configs/img_mgmt/: img_mgmt_config.h
system/mcumgr/configs/log_mgmt/: log_mgmt_config.h
system/mcumgr/configs/os_mgmt/: os_mgmt_config.h
system/mcumgr/configs/shell_mgmt/: shell_mgmt_config.h
system/mcumgr/configs/stat_mgmt/: stat_mgmt_config.h
system/mcumgr/mcumgr/include/mcumgr/: smp_internal.h  smp_reassembly.h  zcbor_bulk.h
system/mcumgr/mcumgr/smp/: smp.c  smp_err.c  smp_err.h
system/mcumgr/mcumgr/util/: zcbor_bulk.c
system/mcumgr/porting/: fs_mgmt.c  img_mgmt.c  img_mgmt_log.c  log_mgmt.c  os_mgmt.c  shell_mgmt.c  stat_mgmt.c
system/uorb/uORB/: uORB.h
testing/unity/: CMakeLists.txt
wireless/bluetooth/nimble/: CMakeLists.txt  Kconfig  (+1 more)
(+40 files in other folders)
